<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical" >

	<LinearLayout 
	    android:orientation="horizontal"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content">
        <EditText
            android:layout_weight="6"
	        android:id="@+id/et_image_value"
	        android:hint="@string/hint_setImageVerifyValue"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"/>
	        
        <com.loopj.android.image.SmartImageView 
	        android:id="@+id/iv"
	        android:layout_weight="4"
	        android:layout_width="0dp"
	        android:onClick="updateVerifyImage"
	        android:layout_height="wrap_content"/>
	</LinearLayout>


    <EditText
        android:id="@+id/et_accountName"
        android:hint="@string/hint_setAccountName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
   	<EditText
        android:id="@+id/et_phone"
        android:hint="@string/hint_setPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLength="11"
        android:inputType="phone" />

	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal">
	    <EditText
	        android:id="@+id/et_phoneVerifyCode"
	        android:hint="@string/hint_setPhoneVerifyCode"
	        android:layout_weight="4"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:inputType="phone" >
   		 </EditText>
   		 
         <Button
	        android:id="@+id/bt_getPhoneVerifyCode"
	        android:layout_weight="6"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:onClick="sendPhoneVerifyCode"
	        android:text="@string/bt_getPhoneVerifyCode" />
	</LinearLayout>
   

    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_setPassword"
        android:maxLength="18"
        android:inputType="textPassword" />
    <EditText
        android:id="@+id/et_queren_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLength="18"
        android:hint="@string/hint_setQuerenPassword"
        android:inputType="textPassword" />
    <Button
        android:id="@+id/bt_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="register"
        android:text="@string/bt_register" />


  	<com.dali.ui.ImageManageGridView
	    android:id="@+id/imv_imageManage"
	    android:layout_width="match_parent"
	    android:layout_height="300dp">
	    
	</com.dali.ui.ImageManageGridView>
</LinearLayout>