<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    style="@style/BaseItem_Group">
    <TextView
        android:id="@+id/tv_label"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:textSize="20dp"
        android:gravity="center_vertical"
        android:text="@string/item_label" />

    <TextView
        android:id="@+id/tv_bixuan"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_toRightOf="@id/tv_label"
        android:textSize="16dp"
        android:gravity="center_vertical"
        android:textColor="#cccccc"
        android:text="@string/item_bixuan" />
    
    <ImageView
        android:id="@+id/iv_arrow_right"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignParentRight="true"
        android:src="@drawable/arrow_right_48px" />
    
    <TextView
        android:id="@+id/tv_value"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_toLeftOf="@id/iv_arrow_right"
        android:gravity="center_vertical"
        android:hint="@string/item_et_hint">
    </TextView>
</RelativeLayout>